# web-diff-tabela-preco

./: .gitignore  README.md  config.py  constants.py  logs.log.2025-09-02  pyproject.toml  run.py
app/: __init__.py
app/controllers/: loggers.py  util.py
app/models/bd/: bd_df.py  sqlserver_conn.py
app/models/custos/: custo.py
app/models/diferenca_preco/: dif_df.py  excel_df.py
app/models/precos/: dif_df.py  excel_df.py
app/routes/: route_main.py
app/static/styles/: style.css
app/templates/: 404.html  base.html  cabecalhos.html  custos.html  custos_resultado.html  footer.html  index.html  precos.html  precos_resultado.html  sobre.html
app/templates/tab_preco/: index.html
xls/: Tabela Barra Mansa 01-09-2025.xlsx  Tabela Barra Mansa 29-08-2025.xlsx  Tabela de Preco Representante Geral (Litoral).xls  Tabela de Preco Representante Geral.xls  preco_diferente_sp2.xlsx  preco_novo_sp2.xlsx  preco_vigente_sp2.xlsx
