[project]
name = "web-diff-values"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "xlrd>=2.0.2",
]
